--- a/components/JTableRow/package.json
+++ b/components/JTableRow/package.json
@@ -1,7 +1,8 @@
 {
-    "name": "@jsilva-pt/j-table-row",
+    "name": "@naser-pt/j-table-row",
     "version": "0.1.0",
     "publishConfig": {
         "access": "public"
-    }
+    },
+    "gitHead": "91c86850a851c19697b71b0ab889c3da5e5d63b6"
 }
