--- a/components/JTableRow/package.json
+++ b/components/JTableRow/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "@naser2-pt/j-table-row",
+    "name": "@naser2test-pt/j-table-row",
     "version": "0.3.0",
     "publishConfig": {
         "access": "public"
